--- a/index.html
+++ b/index.html
@@ -82,9 +82,47 @@
                 </div>
             </div>
 
-            <div class="content-section">
-                <h2 class="section-heading">TOUR DATES</h2>
-                <p class="section-sub-heading">Remember to book your tickets!</p>
+            <!-- Tour section -->
+            <div class="tour-section">
+                <div class="content-section">
+                    <h2 class="section-heading text-white">TOUR DATES</h2>
+                    <p class="section-sub-heading text-white">Remember to book your tickets!</p>
+                    <ul class="tickets-list">
+                        <li><a href="">September <span class="sold-out">Sold out</span></a></li>
+                        <li><a href="">October <span class="sold-out">Sold out</a></li>
+                        <li><a href="">November <span class="quantity">3</a></li>
+                    </ul>
+                    <div class="places-list">
+                        <div class="place-item">
+                            <img src="/assets/img/tours/newyork.jpg" alt="New York" class="place-img">
+                            <div class="place-body">
+                                <h3 class="place-heading">New York</h3>
+                                <p class="place-time">Fri 27 Nov 2016</p>
+                                <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                                <a href="" class="buy-ticket">Buy Tickets</a>
+                            </div>
+                        </div>
+                        <div class="place-item">
+                            <img src="/assets/img/tours/paris.jpg" alt="New York" class="place-img">
+                            <div class="place-body">
+                                <h3 class="place-heading">Paris</h3>
+                                <p class="place-time">Sat 28 Nov 2016</p>
+                                <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                                <a href="" class="buy-ticket">Buy Tickets</a>
+                            </div>
+                        </div>
+                        <div class="place-item">
+                            <img src="/assets/img/tours/sanfran.jpg" alt="New York" class="place-img">
+                            <div class="place-body">
+                                <h3 class="place-heading">San Francisco</h3>
+                                <p class="place-time">Sun 29 Nov 2016</p>
+                                <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                                <a href="" class="buy-ticket">Buy Tickets</a>
+                            </div>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                </div>
 
             </div>
 
