--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="/assets/font/themify-icons-font/themify-icons/SVG/timer.svg" type="image/x-icon"/>
     <!-- link:css -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/font/themify-icons-font/themify-icons/themify-icons.css">
 </head>
 
@@ -38,6 +39,9 @@
             <div class="search-btn">
                 <!-- nên tạo ra 1 class khác để tránh về sau có thể thay đổi icon khác -->
                 <i class="search-icon ti-search"></i>
+            </div>
+            <div class="mobile-menu-btn">
+                <i class="menu-icon ti-menu"></i>
             </div>
         </div>
         <!-- end header -->
@@ -153,7 +157,7 @@
                                 </div>
                             </div>
                             <div class="mt-16">
-                                <input class="btn pull-right" type="submit" value="SEND">
+                                <input class="btn pull-right btn-form-control" type="submit" value="SEND">
                             </div>
                         </form>
                     </div>
