--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The band</title>
-    <link rel="icon" href="/assets/font/themify-icons-font/themify-icons/SVG/timer.svg" type="image/x-icon"/>
+    <link rel="icon" href="/assets/font/themify-icons-font/themify-icons/SVG/timer.svg" type="image/x-icon" />
     <!-- link:css -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
@@ -24,7 +24,7 @@
                 <li><a href="#tour">Tour</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li>
-                    <a href="">More
+                    <a href="#">More
                         <!-- nên tạo ra 1 class khác để tránh về sau có thể thay đổi icon khác -->
                         <i class="nav-arrow-down ti-angle-down"></i>
                     </a>
@@ -40,7 +40,7 @@
                 <!-- nên tạo ra 1 class khác để tránh về sau có thể thay đổi icon khác -->
                 <i class="search-icon ti-search"></i>
             </div>
-            <div class="mobile-menu-btn">
+            <div id="mobile-menu" class="mobile-menu-btn">
                 <i class="menu-icon ti-menu"></i>
             </div>
         </div>
@@ -70,15 +70,15 @@
                     consequat.
                 </p>
                 <div class="row member-list">
-                    <div class="col col-third text-center">
+                    <div class="col col-third s-col-full mt-32 text-center">
                         <p class="member-name">Name</p>
                         <img src="/assets/img/member/bandmember.jpg" alt="Name" class="member-img">
                     </div>
-                    <div class="col col-third text-center">
+                    <div class="col col-third s-col-full mt-32 text-center">
                         <p class="member-name">Name</p>
                         <img src="/assets/img/member/bandmember.jpg" alt="Name" class="member-img">
                     </div>
-                    <div class="col col-third text-center">
+                    <div class="col col-third s-col-full mt-32 text-center">
                         <p class="member-name">Name</p>
                         <img src="/assets/img/member/bandmember.jpg" alt="Name" class="member-img">
                     </div>
@@ -98,7 +98,7 @@
                         <li><a href="">November <span class="quantity">3</a></li>
                     </ul>
                     <div class="row places-list">
-                        <div class="col col-third">
+                        <div class="col col-third s-col-full mt-16">
                             <img src="/assets/img/tours/newyork.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
@@ -107,7 +107,7 @@
                                 <a href="" class="btn">Buy Tickets</a>
                             </div>
                         </div>
-                        <div class="col col-third">
+                        <div class="col col-third s-col-full mt-16">
                             <img src="/assets/img/tours/paris.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Paris</h3>
@@ -116,7 +116,7 @@
                                 <a href="" class="btn">Buy Tickets</a>
                             </div>
                         </div>
-                        <div class="col col-third">
+                        <div class="col col-third s-col-full mt-16">
                             <img src="/assets/img/tours/sanfran.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">San Francisco</h3>
@@ -136,18 +136,18 @@
                 <p class="section-sub-heading">Fan? Drop a note!</p>
 
                 <div class="row contact-content">
-                    <div class="col col-half contact-info">
+                    <div class="col col-half s-col-full contact-info">
                         <p><i class="ti-location-pin"></i>Chicago, US</p>
                         <p><i class="ti-mobile"></i>Phone: +00 151515</p>
                         <p><i class="ti-email"></i>Email: mail@mail.com</p>
                     </div>
-                    <div class="col col-half contact-form">
+                    <div class="col col-half s-col-full contact-form">
                         <form action="">
                             <div class="row">
-                                <div class="col col-half">
+                                <div class="col col-half s-col-full">
                                     <input type="text" name="" id="" placeholder="Name" required class="form-control">
                                 </div>
-                                <div class="col col-half">
+                                <div class="col col-half s-col-full s-mt-8">
                                     <input type="text" name="" id="" placeholder="Email" required class="form-control">
                                 </div>
                             </div>
@@ -157,7 +157,7 @@
                                 </div>
                             </div>
                             <div class="mt-16">
-                                <input class="btn pull-right btn-form-control" type="submit" value="SEND">
+                                <input class="btn pull-right btn-form-control s-full-width" type="submit" value="SEND">
                             </div>
                         </form>
                     </div>
@@ -178,15 +178,48 @@
                 <a href=""><i class="ti-youtube"></i></a>
                 <a href=""><i class="ti-pinterest"></i></a>
                 <a href=""><i class="ti-twitter-alt"></i></a>
-                <a href=""><i class="ti-linkedin"></i></a>  
+                <a href=""><i class="ti-linkedin"></i></a>
             </div>
             <p class="coppyright">Powered by <a href="">w3.css</a></p>
         </div>
     </div>
-<!-- 
-    <h2 class="pc">PC</h2>
-    <h2 class="tablet">TABLE</h2>
-    <h2 class="mobile">MOBILE</h2> -->
+
+    <script>
+        var header = document.getElementById('header');
+        var mobileMenu = document.getElementById('mobile-menu');
+
+        var clientHeight = header.clientHeight;
+        /* đóng/mở menu */
+        mobileMenu.onclick = function () {
+            var isClose = header.clientHeight === clientHeight;
+            if (isClose) {
+                header.style.height = 'auto';
+            } else {
+                header.style.height = null;
+            }
+        }
+
+        /* tự động đóng menu khi chọn */
+        var menuItems = document.querySelectorAll('#nav li a[href*="#"]');
+        for (var i = 0; i < menuItems.length; i++) {
+            var menuItem = menuItems[i];
+            menuItem.onclick = function () {
+                /*
+                    Nhấn vào nút MORE
+                    Ktra xem menu có chứa phần tử liền kề và ptu liền kề chưa class là subnav
+                    - classList: truy cập vào 1 class
+                    - contains: ktra 1 class có tồn tại trong classList không
+                    - preventDefault: bỏ qua st mặc định
+                */
+                var isParentMenu = this.nextElementSibling && this.nextElementSibling.classList.contains('subnav');
+                if (isParentMenu) {
+                    event.preventDefault();
+                } else {
+                    header.style.height = null;
+                }
+            }
+        }
+    </script>
 </body>
 
 </html>
